; ModuleID = '/home/carl/AnghaBench/FFmpeg/libavcodec/extr_srtenc.c_srt_stack_push_pop.c'
source_filename = "/home/carl/AnghaBench/FFmpeg/libavcodec/extr_srtenc.c_srt_stack_push_pop.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_7__ = type { i32, i32 }

@AV_LOG_ERROR = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [20 x i8] c"tag stack overflow\0A\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.TYPE_7__*, i8, i32)* @srt_stack_push_pop to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @srt_stack_push_pop(%struct.TYPE_7__* %0, i8 signext %1, i32 %2) #0 {
  %4 = alloca %struct.TYPE_7__*, align 8
  %5 = alloca i8, align 1
  %6 = alloca i32, align 4
  %7 = alloca i32, align 4
  store %struct.TYPE_7__* %0, %struct.TYPE_7__** %4, align 8
  store i8 %1, i8* %5, align 1
  store i32 %2, i32* %6, align 4
  %8 = load i32, i32* %6, align 4
  %9 = icmp ne i32 %8, 0
  br i1 %9, label %10, label %37

10:                                               ; preds = %3
  %11 = load i8, i8* %5, align 1
  %12 = sext i8 %11 to i32
  %13 = icmp ne i32 %12, 0
  br i1 %13, label %14, label %18

14:                                               ; preds = %10
  %15 = load %struct.TYPE_7__*, %struct.TYPE_7__** %4, align 8
  %16 = load i8, i8* %5, align 1
  %17 = call i32 @srt_stack_find(%struct.TYPE_7__* %15, i8 signext %16)
  br label %19

18:                                               ; preds = %10
  br label %19

19:                                               ; preds = %18, %14
  %20 = phi i32 [ %17, %14 ], [ 0, %18 ]
  store i32 %20, i32* %7, align 4
  %21 = load i32, i32* %7, align 4
  %22 = icmp slt i32 %21, 0
  br i1 %22, label %23, label %24

23:                                               ; preds = %19
  br label %49

24:                                               ; preds = %19
  br label %25

25:                                               ; preds = %31, %24
  %26 = load %struct.TYPE_7__*, %struct.TYPE_7__** %4, align 8
  %27 = getelementptr inbounds %struct.TYPE_7__, %struct.TYPE_7__* %26, i32 0, i32 0
  %28 = load i32, i32* %27, align 4
  %29 = load i32, i32* %7, align 4
  %30 = icmp ne i32 %28, %29
  br i1 %30, label %31, label %36

31:                                               ; preds = %25
  %32 = load %struct.TYPE_7__*, %struct.TYPE_7__** %4, align 8
  %33 = load %struct.TYPE_7__*, %struct.TYPE_7__** %4, align 8
  %34 = call i32 @srt_stack_pop(%struct.TYPE_7__* %33)
  %35 = call i32 @srt_close_tag(%struct.TYPE_7__* %32, i32 %34)
  br label %25

36:                                               ; preds = %25
  br label %49

37:                                               ; preds = %3
  %38 = load %struct.TYPE_7__*, %struct.TYPE_7__** %4, align 8
  %39 = load i8, i8* %5, align 1
  %40 = call i64 @srt_stack_push(%struct.TYPE_7__* %38, i8 signext %39)
  %41 = icmp slt i64 %40, 0
  br i1 %41, label %42, label %48

42:                                               ; preds = %37
  %43 = load %struct.TYPE_7__*, %struct.TYPE_7__** %4, align 8
  %44 = getelementptr inbounds %struct.TYPE_7__, %struct.TYPE_7__* %43, i32 0, i32 1
  %45 = load i32, i32* %44, align 4
  %46 = load i32, i32* @AV_LOG_ERROR, align 4
  %47 = call i32 @av_log(i32 %45, i32 %46, i8* getelementptr inbounds ([20 x i8], [20 x i8]* @.str, i64 0, i64 0))
  br label %48

48:                                               ; preds = %42, %37
  br label %49

49:                                               ; preds = %23, %48, %36
  ret void
}

declare dso_local i32 @srt_stack_find(%struct.TYPE_7__*, i8 signext) #1

declare dso_local i32 @srt_close_tag(%struct.TYPE_7__*, i32) #1

declare dso_local i32 @srt_stack_pop(%struct.TYPE_7__*) #1

declare dso_local i64 @srt_stack_push(%struct.TYPE_7__*, i8 signext) #1

declare dso_local i32 @av_log(i32, i32, i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
